--- a/client/src/Pages/UserProfile/UsersProfile.css
+++ b/client/src/Pages/UserProfile/UsersProfile.css
@@ -6,6 +6,22 @@
   justify-content: space-between;
 }
 
+.add-btn{
+  margin-top: 10px;
+    padding: 10px 15px;
+    border-radius: 4px;
+    background-color: #009dff;
+    color: white;
+    border: none;
+    text-decoration: none;
+    transition: 0.3s;
+}
+
+.add-btn:hover {
+  cursor:pointer;
+  background-color: #0086d8;
+}
+
 .user-details {
   display: flex;
   align-items: flex-start;
